--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "prepare": "husky"
+    "prepare": "husky",
+    "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
     "@angular/animations": "~18.2.0",
@@ -54,14 +55,17 @@
     "@typescript-eslint/utils": "^8.0.0",
     "angular-eslint": "^18.3.0",
     "cypress": "^13.13.0",
+    "electron": "^31.0.1",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^3.5.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.1.0",
     "nx": "19.8.8",
+    "nx-electron": "^19.0.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
