--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.8.0",
-    "@nx/angular": "19.8.8",
-    "@nx/cypress": "19.8.8",
-    "@nx/eslint": "19.8.8",
-    "@nx/eslint-plugin": "19.8.8",
-    "@nx/jest": "19.8.8",
-    "@nx/js": "19.8.8",
-    "@nx/web": "19.8.8",
-    "@nx/workspace": "19.8.8",
+    "@nx/angular": "19.8.10",
+    "@nx/cypress": "19.8.10",
+    "@nx/eslint": "19.8.10",
+    "@nx/eslint-plugin": "19.8.10",
+    "@nx/jest": "19.8.10",
+    "@nx/js": "19.8.10",
+    "@nx/web": "19.8.10",
+    "@nx/workspace": "19.8.10",
     "@nxext/ionic-angular": "^19.1.2",
     "@schematics/angular": "~18.2.0",
     "@swc-node/register": "~1.9.1",
@@ -60,12 +60,13 @@
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^3.5.0",
+    "eslint-plugin-import": "^2.31.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.1.0",
-    "nx": "19.8.8",
+    "nx": "19.8.10",
     "nx-electron": "^19.0.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
