--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "scripts": {
     "prepare": "husky",
-    "postinstall": "electron-builder install-app-deps"
+    "postinstall": "patch-package && electron-builder install-app-deps"
   },
   "dependencies": {
     "@angular/animations": "~18.2.0",
@@ -24,6 +24,7 @@
     "@angular/router": "~18.2.0",
     "@ionic/angular": "^8.0.0",
     "ionicons": "^7.0.0",
+    "patch-package": "^8.0.0",
     "rxjs": "~7.8.0",
     "serialport": "^12.0.0",
     "zone.js": "~0.14.3"
