docs(repo): add en-AU spell checker

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,5 +43,8 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "always"
   },
+
+  // Code spell checker serrings
+  "cSpell.language": "en,en-AU",
   "cSpell.words": ["Oliveira", "Scrollback", "SPIE"]
 }
