--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -11,6 +11,7 @@
     "joshbolduc.commitlint",
     "naumovs.color-highlight",
     "nrwl.angular-console",
-    "streetsidesoftware.code-spell-checker"
+    "streetsidesoftware.code-spell-checker",
+    "streetsidesoftware.code-spell-checker-australian-english"
   ]
 }
