--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,7 +83,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build renderer
+      - name: Build
         run: npx nx run-many -t build
 
       - name: Build unpacked executable
