--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser-dynamic": "~18.2.0",
     "@angular/router": "~18.2.0",
     "@ionic/angular": "^8.0.0",
+    "electron-updater": "^6.3.9",
     "ionicons": "^7.0.0",
     "patch-package": "^8.0.0",
     "rxjs": "~7.8.0",
