--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,12 +5,8 @@ on:
     branches:
       - dev
 
-# permissions:
-#   actions: read
-#   contents: read
-
 jobs:
-  ci-renderer:
+  ci:
     runs-on: ubuntu-latest
     steps:
       - name: Check out Git repository
@@ -29,10 +25,15 @@ jobs:
           node-version-file: '.nvmrc'
           cache: npm
 
+      - name: Add missing dependencies on act
+        if: ${{ env.ACT }}
+        run: apt-get update && apt-get install xvfb libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libnss3 libxss1 libasound2 libxtst6 xauth xvfb -y
+
       - name: Install dependencies
         run: npm ci
 
       - name: Derive appropriate SHAs for base and head for `nx affected` commands
+        if: ${{ !env.ACT }}
         uses: nrwl/nx-set-shas@v4
 
       - name: Run CI on affected projects
