--- a/apps/spie-ui/project.json
+++ b/apps/spie-ui/project.json
@@ -27,15 +27,15 @@
           "apps/spie-ui/src/global.scss",
           "apps/spie-ui/src/theme/variables.scss"
         ],
-        "scripts": []
+        "scripts": ["node_modules/apexcharts/dist/apexcharts.min.js"]
       },
       "configurations": {
         "production": {
           "budgets": [
             {
               "type": "initial",
-              "maximumWarning": "500kb",
-              "maximumError": "1mb"
+              "maximumWarning": "2mb",
+              "maximumError": "5mb"
             },
             {
               "type": "anyComponentStyle",
