--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@angular/platform-browser-dynamic": "~18.2.0",
     "@angular/router": "~18.2.0",
     "@ionic/angular": "^8.0.0",
+    "apexcharts": "^4.1.0",
     "electron-updater": "^6.3.9",
     "ionicons": "^7.0.0",
+    "ng-apexcharts": "^1.13.0",
     "patch-package": "^8.0.0",
     "rxjs": "~7.8.0",
     "serialport": "^12.0.0",
