--- a/apps/spie-ui-e2e/tsconfig.json
+++ b/apps/spie-ui-e2e/tsconfig.json
@@ -11,7 +11,9 @@
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   },
   "include": [
     "**/*.ts",
