--- a/package.json
+++ b/package.json
@@ -18,53 +18,53 @@
     "postinstall": "patch-package && electron-builder install-app-deps"
   },
   "dependencies": {
-    "@angular/animations": "~18.2.0",
-    "@angular/common": "~18.2.0",
-    "@angular/compiler": "~18.2.0",
-    "@angular/core": "~18.2.0",
-    "@angular/forms": "~18.2.0",
-    "@angular/platform-browser": "~18.2.0",
-    "@angular/platform-browser-dynamic": "~18.2.0",
-    "@angular/router": "~18.2.0",
+    "@angular/animations": "~19.0.0",
+    "@angular/common": "~19.0.0",
+    "@angular/compiler": "~19.0.0",
+    "@angular/core": "~19.0.0",
+    "@angular/forms": "~19.0.0",
+    "@angular/platform-browser": "~19.0.0",
+    "@angular/platform-browser-dynamic": "~19.0.0",
+    "@angular/router": "~19.0.0",
     "@ionic/angular": "^8.0.0",
     "apexcharts": "^4.1.0",
     "electron-updater": "^6.3.9",
     "ionicons": "^7.0.0",
-    "ng-apexcharts": "^1.13.0",
+    "ng-apexcharts": "^1.15.0",
     "patch-package": "^8.0.0",
     "rxjs": "~7.8.0",
     "serialport": "^12.0.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~18.2.0",
-    "@angular-devkit/core": "~18.2.0",
-    "@angular-devkit/schematics": "~18.2.0",
-    "@angular/cli": "~18.2.0",
-    "@angular/compiler-cli": "~18.2.0",
-    "@angular/language-service": "~18.2.0",
+    "@angular-devkit/build-angular": "~19.0.0",
+    "@angular-devkit/core": "~19.0.0",
+    "@angular-devkit/schematics": "~19.0.0",
+    "@angular/cli": "~19.0.0",
+    "@angular/compiler-cli": "~19.0.0",
+    "@angular/language-service": "~19.0.0",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.8.0",
-    "@nx/angular": "19.8.10",
-    "@nx/cypress": "19.8.10",
-    "@nx/eslint": "19.8.10",
-    "@nx/eslint-plugin": "19.8.10",
-    "@nx/jest": "19.8.10",
-    "@nx/js": "19.8.10",
-    "@nx/web": "19.8.10",
-    "@nx/workspace": "19.8.10",
-    "@nxext/ionic-angular": "^19.1.2",
-    "@schematics/angular": "~18.2.0",
+    "@nx/angular": "20.2.2",
+    "@nx/cypress": "20.2.2",
+    "@nx/eslint": "20.2.2",
+    "@nx/eslint-plugin": "20.2.2",
+    "@nx/jest": "20.2.2",
+    "@nx/js": "20.2.2",
+    "@nx/web": "20.2.2",
+    "@nx/workspace": "20.2.2",
+    "@nxext/ionic-angular": "^20.0.5",
+    "@schematics/angular": "~19.0.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.0.0",
-    "angular-eslint": "^18.3.0",
+    "angular-eslint": "^19.0.0",
     "cypress": "^13.13.0",
-    "electron": "^31.0.1",
+    "electron": "^33.3.0",
     "electron-icon-builder": "^2.0.1",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
@@ -74,14 +74,14 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
-    "jest-preset-angular": "~14.1.0",
-    "nx": "19.8.10",
-    "nx-electron": "^19.0.0",
+    "jest-preset-angular": "~14.4.2",
+    "nx": "20.2.2",
+    "nx-electron": "20.0.0-alpha.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.5.2",
+    "typescript": "~5.6.3",
     "typescript-eslint": "^8.0.0"
   }
 }
