--- a/apps/spie-ui/project.json
+++ b/apps/spie-ui/project.json
@@ -27,7 +27,8 @@
           "apps/spie-ui/src/global.scss",
           "apps/spie-ui/src/theme/variables.scss"
         ],
-        "scripts": ["node_modules/apexcharts/dist/apexcharts.min.js"]
+        "scripts": ["node_modules/apexcharts/dist/apexcharts.min.js"],
+        "webWorkerTsConfig": "apps/spie-ui/tsconfig.worker.json"
       },
       "configurations": {
         "production": {
@@ -81,7 +82,8 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/spie-ui/jest.config.ts"
+        "jestConfig": "apps/spie-ui/jest.config.ts",
+        "webWorkerTsConfig": "apps/spie-ui/tsconfig.worker.json"
       }
     },
     "serve-static": {
