--- a/package.json
+++ b/package.json
@@ -19,15 +19,17 @@
   },
   "dependencies": {
     "@angular/animations": "~19.0.0",
+    "@angular/cdk": "~19.0.4",
     "@angular/common": "~19.0.0",
     "@angular/compiler": "~19.0.0",
     "@angular/core": "~19.0.0",
     "@angular/forms": "~19.0.0",
+    "@angular/material": "~19.0.4",
     "@angular/platform-browser": "~19.0.0",
     "@angular/platform-browser-dynamic": "~19.0.0",
     "@angular/router": "~19.0.0",
     "@ionic/angular": "^8.0.0",
-    "apexcharts": "^4.1.0",
+    "apexcharts": "^4.3.0",
     "electron-updater": "^6.3.9",
     "ionicons": "^7.0.0",
     "ng-apexcharts": "^1.15.0",
@@ -43,6 +45,7 @@
     "@angular/cli": "~19.0.0",
     "@angular/compiler-cli": "~19.0.0",
     "@angular/language-service": "~19.0.0",
+    "@angular/material": "^19.0.4",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.8.0",
@@ -61,7 +64,7 @@
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
-    "@typescript-eslint/utils": "^8.0.0",
+    "@typescript-eslint/utils": "^8.13.0",
     "angular-eslint": "^19.0.0",
     "cypress": "^13.13.0",
     "electron": "^33.3.0",
