--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.4.2",
     "nx": "20.2.2",
-    "nx-electron": "20.0.0-alpha.0",
+    "nx-electron": "^20.0.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
