--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser-dynamic": "~19.0.0",
     "@angular/router": "~19.0.0",
     "@ionic/angular": "^8.0.0",
+    "@robsonos/ionic-mdi": "^0.1.1",
     "apexcharts": "^4.3.0",
     "electron-updater": "^6.3.9",
     "ionicons": "^7.0.0",
