--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,5 +31,5 @@ jobs:
 
       - name: CD
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
         run: npx nx release --skip-publish
