--- a/apps/spie/tsconfig.json
+++ b/apps/spie/tsconfig.json
@@ -3,14 +3,5 @@
   "compilerOptions": {
     "types": ["node"]
   },
-  "files": [],
-  "include": [],
-  "references": [
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.spec.json"
-    }
-  ]
+  "include": ["**/*.ts"]
 }
