--- a/package.json
+++ b/package.json
@@ -18,74 +18,73 @@
     "postinstall": "patch-package && electron-builder install-app-deps"
   },
   "dependencies": {
-    "@angular/animations": "~19.0.0",
-    "@angular/cdk": "~19.0.4",
-    "@angular/common": "~19.0.0",
-    "@angular/compiler": "~19.0.0",
-    "@angular/core": "~19.0.0",
-    "@angular/forms": "~19.0.0",
-    "@angular/material": "~19.0.4",
-    "@angular/platform-browser": "~19.0.0",
-    "@angular/platform-browser-dynamic": "~19.0.0",
-    "@angular/router": "~19.0.0",
+    "@angular/cdk": "^20.1.4",
+    "@angular/common": "~20.1.0",
+    "@angular/compiler": "~20.1.0",
+    "@angular/core": "~20.1.0",
+    "@angular/forms": "~20.1.0",
+    "@angular/material": "^20.1.4",
+    "@angular/platform-browser": "~20.1.0",
+    "@angular/platform-browser-dynamic": "~20.1.0",
+    "@angular/router": "~20.1.0",
     "@ionic/angular": "^8.0.0",
-    "@robsonos/ionic-mdi": "^0.1.1",
-    "apexcharts": "^4.3.0",
-    "electron-updater": "^6.3.9",
+    "@robsonos/ionic-mdi": "^1.0.1",
+    "apexcharts": "^5.3.2",
+    "electron-updater": "^6.6.2",
     "ionicons": "^7.0.0",
-    "ng-apexcharts": "^1.15.0",
+    "ng-apexcharts": "^2.0.0",
     "patch-package": "^8.0.0",
     "rxjs": "~7.8.0",
-    "serialport": "^12.0.0",
+    "serialport": "^13.0.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~19.0.0",
-    "@angular-devkit/core": "~19.0.0",
-    "@angular-devkit/schematics": "~19.0.0",
-    "@angular/cli": "~19.0.0",
-    "@angular/compiler-cli": "~19.0.0",
-    "@angular/language-service": "~19.0.0",
-    "@angular/material": "^19.0.4",
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
+    "@angular-devkit/core": "~20.1.0",
+    "@angular-devkit/schematics": "~20.1.0",
+    "@angular/build": "~20.1.0",
+    "@angular/cli": "~20.1.0",
+    "@angular/compiler-cli": "~20.1.0",
+    "@angular/language-service": "~20.1.0",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.8.0",
-    "@nx/angular": "20.3.0",
-    "@nx/cypress": "20.3.0",
-    "@nx/eslint": "20.3.0",
-    "@nx/eslint-plugin": "20.3.0",
-    "@nx/jest": "20.3.0",
-    "@nx/js": "20.3.0",
-    "@nx/web": "20.3.0",
-    "@nx/workspace": "20.3.0",
-    "@nxext/ionic-angular": "^20.0.5",
-    "@schematics/angular": "~19.0.0",
+    "@nx/angular": "21.3.10",
+    "@nx/cypress": "21.3.10",
+    "@nx/eslint": "21.3.10",
+    "@nx/eslint-plugin": "21.3.10",
+    "@nx/jest": "21.3.10",
+    "@nx/js": "21.3.10",
+    "@nx/web": "21.3.10",
+    "@nx/workspace": "21.3.10",
+    "@nxext/ionic-angular": "^21.0.0",
+    "@schematics/angular": "~20.1.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^30.0.0",
     "@types/node": "18.16.9",
-    "@typescript-eslint/utils": "^8.13.0",
-    "angular-eslint": "^19.0.0",
-    "cypress": "^13.13.0",
-    "electron": "^33.3.0",
+    "@typescript-eslint/utils": "^8.29.0",
+    "angular-eslint": "^20.0.0",
+    "cypress": "^14.2.1",
+    "electron": "^34.5.6",
     "electron-icon-builder": "^2.0.1",
     "eslint": "^9.8.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-cypress": "^3.5.0",
-    "eslint-plugin-import": "^2.31.0",
-    "husky": "^9.1.6",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-environment-node": "^29.7.0",
-    "jest-preset-angular": "~14.4.2",
-    "nx": "20.3.0",
-    "nx-electron": "^20.0.0",
+    "eslint-plugin-import": "^2.32.0",
+    "husky": "^9.1.7",
+    "jest": "^30.0.2",
+    "jest-environment-jsdom": "^30.0.2",
+    "jest-environment-node": "^30.0.2",
+    "jest-preset-angular": "~15.0.0",
+    "jest-util": "^30.0.2",
+    "nx": "21.3.10",
+    "nx-electron": "^21.0.1",
     "prettier": "^2.6.2",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.5.2",
-    "typescript-eslint": "^8.0.0"
+    "typescript": "~5.8.2",
+    "typescript-eslint": "^8.29.0"
   }
 }
